@@ -1,3 +1,9 @@
+2013-01-11  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* gnus-art.el (gnus-mime-display-security): Use point-min-marker
+	and point-max-marker.
+	* gnus-async.el (gnus-async-article-callback): Use point-max-marker.
+
 2013-01-10  Uwe Brauer  <oub@mat.ucm.es>  (tiny change)
 
 	* mml-smime.el (mml-smime-encrypt-to-self): New user option analogous
