@@ -1,3 +1,7 @@
+2013-01-11  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* emacs-lisp/ert.el (ert-run-test): Use point-max-marker.
+
 2013-01-11  Eli Zaretskii  <eliz@gnu.org>
 
 	* autorevert.el (auto-revert-notify-rm-watch)
